# kokoro

./: kokoro-mcp-server-plan.md
demo/: app.py
docs/: mcp-server-development-guide.md
kokoro/: pyproject.toml
kokoro-mcp-server/: .gitignore  config.py  http_server.py  kokoro_service.py  main.py  requirements.txt
kokoro-mcp-server/tests/: test_config.py  test_http_server.py  test_mcp_tools.py
kokoro.js/demo/: package-lock.json
kokoro.js/demo/src/: App.jsx  worker.js
kokoro.js/src/: kokoro.js  splitter.js
